--- a/UI/MainWindow.xaml
+++ b/UI/MainWindow.xaml
@@ -1,15 +1,19 @@
-﻿<Window x:Class="UI.MainWindow"
+<Window x:Class="UI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:UI"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="600"
-        Icon="assets/icon.ico">
-    <Grid>
-      <Grid.Background>
-        <ImageBrush ImageSource="assets/background.png" />
-    </Grid.Background>
-  </Grid>
+        Title="Chess" Width="600" SizeToContent="Height"
+        Icon="assets/icon.ico"
+        WindowStartupLocation="CenterScreen"
+        Background="Black">
+    <Viewbox>
+        <Grid x:Name="ChessBoard" Width="600" Height="600">
+            <Grid.Background>
+                <ImageBrush ImageSource="assets/background.png" />
+            </Grid.Background>
+        </Grid>
+    </Viewbox>
 </Window>
