--- a/UI/MainWindow.xaml
+++ b/UI/MainWindow.xaml
@@ -1,4 +1,4 @@
-<Window x:Class="UI.MainWindow"
+﻿<Window x:Class="UI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -14,6 +14,13 @@
             <Grid.Background>
                 <ImageBrush ImageSource="assets/background.png" />
             </Grid.Background>
+
+            <UniformGrid x:Name="PieceGrid" 
+                         Rows="8" 
+                         Columns="8"
+                         RenderOptions.BitmapScalingMode="HighQuality">
+                
+            </UniformGrid>
         </Grid>
     </Viewbox>
 </Window>
