--- a/UI/MainWindow.xaml
+++ b/UI/MainWindow.xaml
@@ -10,16 +10,21 @@
         WindowStartupLocation="CenterScreen"
         Background="Black">
     <Viewbox>
-        <Grid x:Name="ChessBoard" Width="600" Height="600">
+        <Grid x:Name="ChessBoard" Width="600" Height="600"
+              MouseDown="ChessBoard_MouseDown">
             <Grid.Background>
                 <ImageBrush ImageSource="assets/background.png" />
             </Grid.Background>
+
+            <UniformGrid x:Name="HighlightGrid"
+                         Rows="8"
+                         Columns="8">
+            </UniformGrid>
 
             <UniformGrid x:Name="PieceGrid" 
                          Rows="8" 
                          Columns="8"
                          RenderOptions.BitmapScalingMode="HighQuality">
-                
             </UniformGrid>
         </Grid>
     </Viewbox>
